added to README and fulfilled all public user endpoints
