# api/handlers/workspace.go
@@ -3,10 +3,14 @@ package handlers
 import (
 	"net/http"
 
+	ws_manager "github.com/EO-DataHub/eodhp-workspace-manager/models"
 	"github.com/EO-DataHub/eodhp-workspace-services/api/services"
 	"github.com/gorilla/mux"
 	_ "github.com/lib/pq"
 )
+
+// Trick compiler to keep import for swag annotation
+var _ = ws_manager.WorkspaceSettings{}
 
 // CreateWorkspace handles HTTP requests for creating a new workspace.
 func CreateWorkspace(svc *services.WorkspaceService) http.HandlerFunc {
@@ -118,7 +122,17 @@ func PatchWorkspace(svc *services.WorkspaceService) http.HandlerFunc {
 	}
 }
 
-// GetUsers handles HTTP requests for retrieving users that are members of a workspace
+// @Summary Get users of a workspace
+// @Description Retrieve a list of users who are members of the specified workspace.
+// @Tags Workspaces
+// @Accept json
+// @Produce json
+// @Param workspace-id path string true "Workspace ID"
+// @Success 200 {array} models.User "List of users"
+// @Failure 400 {object} string
+// @Failure 401 {object} string
+// @Failure 500 {object} string
+// @Router /workspaces/{workspace-id}/users [get]
 func GetUsers(svc *services.WorkspaceService) http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -134,7 +148,19 @@ func GetUsers(svc *services.WorkspaceService) http.HandlerFunc {
 	}
 }
 
-// GetUser handles HTTP requests for retrieving individual users that are members of a workspace
+// @Summary Get a user of a workspace
+// @Description Retrieve details of a specific user that is a member of the specified workspace.
+// @Tags Workspaces
+// @Accept json
+// @Produce json
+// @Param workspace-id path string true "Workspace ID"
+// @Param username path string true "Username"
+// @Success 200 {object} models.User "User details"
+// @Failure 400 {object} string
+// @Failure 401 {object} string
+// @Failure 404 {object} string
+// @Failure 500 {object} string
+// @Router /workspaces/{workspace-id}/users/{username} [get]
 func GetUser(svc *services.WorkspaceService) http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -150,7 +176,19 @@ func GetUser(svc *services.WorkspaceService) http.HandlerFunc {
 	}
 }
 
-// AddUser handle HTTP requests for adding a user as a member of a workspace
+// @Summary Add a user to a workspace
+// @Description Add a user to the specified workspace by providing the workspace ID and username.
+// @Tags Workspaces
+// @Accept json
+// @Produce json
+// @Param workspace-id path string true "Workspace ID"
+// @Param username path string true "Username"
+// @Success 200 {string} string "User successfully added to the workspace"
+// @Failure 400 {object} string "Bad Request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 404 {object} string "Workspace or User Not Found"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /workspaces/{workspace-id}/users/{username} [put]
 func AddUser(svc *services.WorkspaceService) http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -166,7 +204,19 @@ func AddUser(svc *services.WorkspaceService) http.HandlerFunc {
 	}
 }
 
-// RemoveUser handle HTTP requests for removing a user as a member of a workspace
+// @Summary Remove a user from a workspace
+// @Description Remove a user from the specified workspace by providing the workspace ID and username.
+// @Tags Workspaces
+// @Accept json
+// @Produce json
+// @Param workspace-id path string true "Workspace ID"
+// @Param username path string true "Username"
+// @Success 200 {string} string "User successfully removed from the workspace"
+// @Failure 400 {object} string "Bad Request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 404 {object} string "Workspace or User Not Found"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /workspaces/{workspace-id}/users/{username} [delete]
 func RemoveUser(svc *services.WorkspaceService) http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
