# docs/openapi.yaml
@@ -141,13 +141,204 @@ paths:
             application/json:
               schema:
                 type: string
+  "/workspaces/{workspace-id}/users":
+    get:
+      description: Retrieve a list of users who are members of the specified workspace.
+      tags:
+        - Workspaces
+      summary: Get users of a workspace
+      parameters:
+        - description: Workspace ID
+          name: workspace-id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: List of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/models.User"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: string
+  "/workspaces/{workspace-id}/users/{username}":
+    get:
+      description: Retrieve details of a specific user that is a member of the
+        specified workspace.
+      tags:
+        - Workspaces
+      summary: Get a user of a workspace
+      parameters:
+        - description: Workspace ID
+          name: workspace-id
+          in: path
+          required: true
+          schema:
+            type: string
+        - description: Username
+          name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: User details
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/models.User"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: string
+    put:
+      description: Add a user to the specified workspace by providing the workspace ID
+        and username.
+      tags:
+        - Workspaces
+      summary: Add a user to a workspace
+      parameters:
+        - description: Workspace ID
+          name: workspace-id
+          in: path
+          required: true
+          schema:
+            type: string
+        - description: Username
+          name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: User successfully added to the workspace
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+        "404":
+          description: Workspace or User Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: string
+    delete:
+      description: Remove a user from the specified workspace by providing the
+        workspace ID and username.
+      tags:
+        - Workspaces
+      summary: Remove a user from a workspace
+      parameters:
+        - description: Workspace ID
+          name: workspace-id
+          in: path
+          required: true
+          schema:
+            type: string
+        - description: Username
+          name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: User successfully removed from the workspace
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+        "404":
+          description: Workspace or User Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: string
   "/workspaces/{workspace-id}/{user-id}/s3-tokens":
     post:
       description: Request S3 session credentials for user access to a single
         workspace. {user-id} can be set to "me" to use the token owner's user
         id.
       tags:
-        - s3 credentials auth
+        - Workspaces
       summary: Request S3 session credentials
       parameters:
         - example: my-workspace
@@ -195,7 +386,7 @@ paths:
         single workspace. {user-id} can be set to "me" to use the token owner's
         user id.
       tags:
-        - workspace session credentials auth
+        - Workspaces
       summary: Request workspace scoped session credentials
       parameters:
         - example: my-workspace
@@ -336,8 +527,20 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/models.ObjectStore"
+    models.User:
+      type: object
+      properties:
+        email:
+          type: string
+        firstName:
+          type: string
+        id:
+          type: string
+        lastName:
+          type: string
+        username:
+          type: string
     models.WorkspaceSettings:
-      description: Workspace configuration including associated stores.
       type: object
       properties:
         account:
